Updated layout for search and filtering, fixed bug when markres don't come back when delete using cmd or ctr plus shift and backspace

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,8 @@
   min-height: 750px;
   width: 100%;
   height: 100%;
-  border-radius: 2%;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .infowindow {
